--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </head>
     <body>
 
-	<a href="https://ixd-supsi.github.io/specchiodellemiebrame/">INDICE</a>	
+	<a href="https://ixd-supsi.github.io/avatargenerator/">INDICE</a>	
 		
 		
        <div class="contenitore">
